Wczytywanie i generowanie pliku

--- a/app/src/main/res/layout/activity_hide.xml
+++ b/app/src/main/res/layout/activity_hide.xml
@@ -34,6 +34,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FileBytesCount"/>
+    <TextView
+        android:id="@+id/VMFileBytesCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+    <Button
+        android:id="@+id/btnHideActivity_ChooseFile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnHideActivity_ChooseFile"
+        android:textSize="20sp"
+        android:layout_gravity="center"/>
 
     <Button
         android:id="@+id/btnHideActivity_Execute"
