--- a/app/src/main/res/layout/activity_hide.xml
+++ b/app/src/main/res/layout/activity_hide.xml
@@ -18,9 +18,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FileName"/>
+        android:text="Container"/>
     <TextView
-        android:id="@+id/VMFileName"
+        android:id="@+id/tvContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bytes"/>
+    <TextView
+        android:id="@+id/tvContainerBytes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
@@ -28,29 +37,29 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FilePath"/>
+        android:text="Text"/>
     <TextView
-        android:id="@+id/VMFilePath"
+        android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FileBytesCount"/>
+        android:text="Bytes"/>
     <TextView
-        android:id="@+id/VMFileBytesCount"
+        android:id="@+id/tvTextBytes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
 
-    <Button
-        android:id="@+id/btnHideActivity_ChooseFile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btnHideActivity_ChooseFile"
-        android:textSize="20sp"
-        android:layout_gravity="center"/>
+<!--    <Button-->
+<!--        android:id="@+id/btnHideActivity_ChooseFile"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/btnHideActivity_ChooseFile"-->
+<!--        android:textSize="20sp"-->
+<!--        android:layout_gravity="center"/>-->
 
     <Button
         android:id="@+id/btnHideActivity_Execute"
