--- a/app/src/main/res/layout/activity_hide.xml
+++ b/app/src/main/res/layout/activity_hide.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+    <TextView
+        android:id="@+id/tvSelectFileFragment_Header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tvSelectFileHeader"
+        android:layout_gravity="center"
+        android:textSize="20sp"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -13,45 +27,45 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/frame_SelectTextFileInHideActivity"/>
+        android:id="@+id/frame_SelectTextInHideActivity"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Container"/>
-    <TextView
-        android:id="@+id/tvContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bytes"/>
-    <TextView
-        android:id="@+id/tvContainerBytes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Container"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/tvContainer"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        />-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Bytes"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/tvContainerBytes"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Text"/>
-    <TextView
-        android:id="@+id/tvText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bytes"/>
-    <TextView
-        android:id="@+id/tvTextBytes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Text"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/tvText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        />-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Bytes"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/tvTextBytes"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        />-->
 
 <!--    <Button-->
 <!--        android:id="@+id/btnHideActivity_ChooseFile"-->
@@ -69,5 +83,6 @@
         android:textSize="20sp"
         android:layout_gravity="center"/>
 
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
