--- a/app/src/main/res/layout/activity_unhide.xml
+++ b/app/src/main/res/layout/activity_unhide.xml
@@ -5,25 +5,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tvSelectFileFragment_Header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tvSelectFileHeader"
+        android:layout_gravity="center"
+        android:textSize="20sp"/>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/frame_SelectFileInUnhideActivity"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Container"/>
-    <TextView
-        android:id="@+id/tvContainerWithMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Container"/>-->
+<!--    <TextView-->
+<!--        android:id="@+id/tvContainerWithMessage"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        />-->
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Text wiadomosci: "/>
+        android:text="Text wiadomosci: "
+        android:textSize="20sp"/>
     <TextView
         android:id="@+id/tvMessageText"
         android:layout_width="wrap_content"
