--- a/app/src/main/res/layout/select_text_fragment.xml
+++ b/app/src/main/res/layout/select_text_fragment.xml
@@ -12,6 +12,14 @@
         android:layout_gravity="center"
         android:textSize="20sp"/>
 
+    <EditText
+        android:id="@+id/etSelectTextFragment_Text"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:inputType="text|textMultiLine"
+        android:gravity="top"
+        android:textSize="20sp"/>
+
 <!--    <RadioGroup-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
@@ -26,76 +34,76 @@
 <!--            android:text="@string/rbSelectTextFragment_TextFromInput" />-->
 <!--    </RadioGroup>-->
 
-    <ImageButton
-        android:id="@+id/btnTextFile"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/image_button_text_file"
-        android:scaleType="fitCenter"
-        android:layout_marginStart="5dp"
-        />
+<!--    <ImageButton-->
+<!--        android:id="@+id/btnTextFile"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:src="@drawable/image_button_text_file"-->
+<!--        android:scaleType="fitCenter"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        />-->
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+<!--    <RelativeLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content">-->
 
-        <TextView
-            android:id="@+id/tvSelectTextFragment_FileNameHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:text="@string/tvSelectTextFragment_FileNameHeader"
-            android:textSize="20sp"/>
+<!--        <TextView-->
+<!--            android:id="@+id/tvSelectTextFragment_FileNameHeader"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:text="@string/tvSelectTextFragment_FileNameHeader"-->
+<!--            android:textSize="20sp"/>-->
 
-        <TextView
-            android:id="@+id/tvSelectTextFragment_FileNameDetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_toEndOf="@id/tvSelectTextFragment_FileNameHeader"
-            android:text="@string/temp"
-            android:textSize="20sp"
-            />
+<!--        <TextView-->
+<!--            android:id="@+id/tvSelectTextFragment_FileNameDetails"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:layout_toEndOf="@id/tvSelectTextFragment_FileNameHeader"-->
+<!--            android:text="@string/temp"-->
+<!--            android:textSize="20sp"-->
+<!--            />-->
 
-        <TextView
-            android:id="@+id/tvSelectTextFragment_FileSizeHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"
-            android:text="@string/tvSelectTextFragment_FileSizeHeader"
-            android:textSize="20sp"/>
+<!--        <TextView-->
+<!--            android:id="@+id/tvSelectTextFragment_FileSizeHeader"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"-->
+<!--            android:text="@string/tvSelectTextFragment_FileSizeHeader"-->
+<!--            android:textSize="20sp"/>-->
 
-        <TextView
-            android:id="@+id/tvSelectTextFragment_FileSizeDetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_toEndOf="@id/tvSelectTextFragment_FileSizeHeader"
-            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"
-            android:text="@string/temp"
-            android:textSize="20sp"
-            />
+<!--        <TextView-->
+<!--            android:id="@+id/tvSelectTextFragment_FileSizeDetails"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:layout_toEndOf="@id/tvSelectTextFragment_FileSizeHeader"-->
+<!--            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"-->
+<!--            android:text="@string/temp"-->
+<!--            android:textSize="20sp"-->
+<!--            />-->
 
-        <TextView
-            android:id="@+id/tvSelectTextFragment_TextLength"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"
-            android:text="@string/tvSelectTextFragment_TextLength"
-            android:textSize="20sp"/>
+<!--        <TextView-->
+<!--            android:id="@+id/tvSelectTextFragment_TextLength"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"-->
+<!--            android:text="@string/tvSelectTextFragment_TextLength"-->
+<!--            android:textSize="20sp"/>-->
 
-        <TextView
-            android:id="@+id/tvSelectTextFragment_MaxSignsDetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_toEndOf="@id/tvSelectTextFragment_TextLength"
-            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"
-            android:text="@string/temp"
-            android:textSize="20sp"
-            />
-    </RelativeLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/tvSelectTextFragment_MaxSignsDetails"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:layout_toEndOf="@id/tvSelectTextFragment_TextLength"-->
+<!--            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"-->
+<!--            android:text="@string/temp"-->
+<!--            android:textSize="20sp"-->
+<!--            />-->
+<!--    </RelativeLayout>-->
 
 </LinearLayout>
