Wszystkie funkcje systemu działają

--- a/app/src/main/res/layout/activity_decode.xml
+++ b/app/src/main/res/layout/activity_decode.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,43 +8,43 @@
         android:id="@+id/tvSelectFileFragment_Header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tvSelectFileHeader"
         android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:text="@string/tvSelectFileHeader"
+        android:textSize="20sp" />
 
     <FrameLayout
+        android:id="@+id/frame_SelectFileInUnhideActivity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/frame_SelectFileInUnhideActivity"/>
+        android:layout_height="wrap_content" />
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Container"/>-->
-<!--    <TextView-->
-<!--        android:id="@+id/tvContainerWithMessage"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        />-->
+    <!--    <TextView-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="Container"/>-->
+    <!--    <TextView-->
+    <!--        android:id="@+id/tvContainerWithMessage"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        />-->
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Text wiadomosci: "
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
+
     <TextView
         android:id="@+id/tvMessageText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btnUnhideActivity_Execute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/btnHideActivity_Execute"
-        android:textSize="20sp"
-        android:layout_gravity="center"/>
+        android:textSize="20sp" />
 
 
 </LinearLayout>
