--- a/app/src/main/res/layout/select_file_fragment.xml
+++ b/app/src/main/res/layout/select_file_fragment.xml
@@ -1,111 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFEB3B">
+    android:background="#FFEB3B"
+    android:orientation="vertical">
 
-<!--    <TextView-->
-<!--        android:id="@+id/tvSelectFileFragment_Header"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/tvSelectFileHeader"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:textSize="20sp"/>-->
+    <!--    <TextView-->
+    <!--        android:id="@+id/tvSelectFileFragment_Header"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="@string/tvSelectFileHeader"-->
+    <!--        android:layout_gravity="center"-->
+    <!--        android:textSize="20sp"/>-->
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="100dp">
+
         <ImageButton
             android:id="@+id/btnImage"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/image_button_picture"
-            android:scaleType="fitCenter"
             android:layout_marginStart="5dp"
-            />
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/image_button_picture" />
+
         <ImageButton
             android:id="@+id/btnVideo"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/image_button_video"
-            android:scaleType="fitCenter"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            />
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/image_button_video" />
+
         <ImageButton
             android:id="@+id/btnAudio"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/image_button_audio"
-            android:scaleType="fitCenter"
             android:layout_marginEnd="5dp"
-            />
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/image_button_audio" />
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvSelectFileFragment_FileNameHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:text="@string/tvSelectFileFragment_FileNameHeader"
-        android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/tvSelectFileFragment_FileNameHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:text="@string/tvSelectFileFragment_FileNameHeader"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/tvSelectFileFragment_FileNameDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_toEndOf="@id/tvSelectFileFragment_FileNameHeader"
-        android:text="@string/temp"
-        android:textSize="20sp"
-        />
+        <TextView
+            android:id="@+id/tvSelectFileFragment_FileNameDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_toEndOf="@id/tvSelectFileFragment_FileNameHeader"
+            android:text="@string/temp"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/tvSelectFileFragment_FileSizeHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_below="@id/tvSelectFileFragment_FileNameHeader"
-        android:text="@string/tvSelectFileFragment_FileSizeHeader"
-        android:textSize="20sp"/>
+        <TextView
+            android:id="@+id/tvSelectFileFragment_FileSizeHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvSelectFileFragment_FileNameHeader"
+            android:layout_margin="2dp"
+            android:text="@string/tvSelectFileFragment_FileSizeHeader"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/tvSelectFileFragment_FileSizeDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_toEndOf="@id/tvSelectFileFragment_FileSizeHeader"
-        android:layout_below="@id/tvSelectFileFragment_FileNameHeader"
-        android:text="@string/temp"
-        android:textSize="20sp"
-        />
+        <TextView
+            android:id="@+id/tvSelectFileFragment_FileSizeDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvSelectFileFragment_FileNameHeader"
+            android:layout_margin="2dp"
+            android:layout_toEndOf="@id/tvSelectFileFragment_FileSizeHeader"
+            android:text="@string/temp"
+            android:textSize="20sp" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/tvSelectFileFragment_MaxSignsHeader"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="2dp"-->
-<!--        android:layout_below="@id/tvSelectFileFragment_FileSizeHeader"-->
-<!--        android:text="@string/tvSelectFileFragment_MaxSignsHeader"-->
-<!--        android:textSize="20sp"/>-->
+        <!--    <TextView-->
+        <!--        android:id="@+id/tvSelectFileFragment_MaxSignsHeader"-->
+        <!--        android:layout_width="wrap_content"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_margin="2dp"-->
+        <!--        android:layout_below="@id/tvSelectFileFragment_FileSizeHeader"-->
+        <!--        android:text="@string/tvSelectFileFragment_MaxSignsHeader"-->
+        <!--        android:textSize="20sp"/>-->
 
-<!--    <TextView-->
-<!--        android:id="@+id/tvSelectFileFragment_MaxSignsDetails"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="2dp"-->
-<!--        android:layout_toEndOf="@id/tvSelectFileFragment_MaxSignsHeader"-->
-<!--        android:layout_below="@id/tvSelectFileFragment_FileSizeHeader"-->
-<!--        android:text="@string/temp"-->
-<!--        android:textSize="20sp"-->
-<!--        />-->
+        <!--    <TextView-->
+        <!--        android:id="@+id/tvSelectFileFragment_MaxSignsDetails"-->
+        <!--        android:layout_width="wrap_content"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_margin="2dp"-->
+        <!--        android:layout_toEndOf="@id/tvSelectFileFragment_MaxSignsHeader"-->
+        <!--        android:layout_below="@id/tvSelectFileFragment_FileSizeHeader"-->
+        <!--        android:text="@string/temp"-->
+        <!--        android:textSize="20sp"-->
+        <!--        />-->
     </RelativeLayout>
 
 </LinearLayout>
