--- a/app/src/main/res/layout/select_text_fragment.xml
+++ b/app/src/main/res/layout/select_text_fragment.xml
@@ -1,109 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#2196F3">
+    android:background="#2196F3"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvSelectTextFragment_Header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tvSelectTextFragment_Header"
         android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:text="@string/tvSelectTextFragment_Header"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/etSelectTextFragment_Text"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:inputType="text|textMultiLine"
         android:gravity="top"
-        android:textSize="20sp"/>
+        android:inputType="text|textMultiLine"
+        android:textSize="20sp" />
 
-<!--    <RadioGroup-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical">-->
-<!--        <RadioButton android:id="@+id/rbSelectTextFragment_TextFromFile"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@string/rbSelectTextFragment_TextFromFile"/>-->
-<!--        <RadioButton android:id="@+id/rbSelectTextFragment_TextFromInput"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="@string/rbSelectTextFragment_TextFromInput" />-->
-<!--    </RadioGroup>-->
+    <!--    <RadioGroup-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="vertical">-->
+    <!--        <RadioButton android:id="@+id/rbSelectTextFragment_TextFromFile"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text="@string/rbSelectTextFragment_TextFromFile"/>-->
+    <!--        <RadioButton android:id="@+id/rbSelectTextFragment_TextFromInput"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text="@string/rbSelectTextFragment_TextFromInput" />-->
+    <!--    </RadioGroup>-->
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/btnTextFile"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="100dp"-->
-<!--        android:src="@drawable/image_button_text_file"-->
-<!--        android:scaleType="fitCenter"-->
-<!--        android:layout_marginStart="5dp"-->
-<!--        />-->
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/btnTextFile"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="100dp"-->
+    <!--        android:src="@drawable/image_button_text_file"-->
+    <!--        android:scaleType="fitCenter"-->
+    <!--        android:layout_marginStart="5dp"-->
+    <!--        />-->
 
-<!--    <RelativeLayout-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content">-->
+    <!--    <RelativeLayout-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content">-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tvSelectTextFragment_FileNameHeader"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="2dp"-->
-<!--            android:text="@string/tvSelectTextFragment_FileNameHeader"-->
-<!--            android:textSize="20sp"/>-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tvSelectTextFragment_FileNameHeader"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="2dp"-->
+    <!--            android:text="@string/tvSelectTextFragment_FileNameHeader"-->
+    <!--            android:textSize="20sp"/>-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tvSelectTextFragment_FileNameDetails"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="2dp"-->
-<!--            android:layout_toEndOf="@id/tvSelectTextFragment_FileNameHeader"-->
-<!--            android:text="@string/temp"-->
-<!--            android:textSize="20sp"-->
-<!--            />-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tvSelectTextFragment_FileNameDetails"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="2dp"-->
+    <!--            android:layout_toEndOf="@id/tvSelectTextFragment_FileNameHeader"-->
+    <!--            android:text="@string/temp"-->
+    <!--            android:textSize="20sp"-->
+    <!--            />-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tvSelectTextFragment_FileSizeHeader"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="2dp"-->
-<!--            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"-->
-<!--            android:text="@string/tvSelectTextFragment_FileSizeHeader"-->
-<!--            android:textSize="20sp"/>-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tvSelectTextFragment_FileSizeHeader"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="2dp"-->
+    <!--            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"-->
+    <!--            android:text="@string/tvSelectTextFragment_FileSizeHeader"-->
+    <!--            android:textSize="20sp"/>-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tvSelectTextFragment_FileSizeDetails"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="2dp"-->
-<!--            android:layout_toEndOf="@id/tvSelectTextFragment_FileSizeHeader"-->
-<!--            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"-->
-<!--            android:text="@string/temp"-->
-<!--            android:textSize="20sp"-->
-<!--            />-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tvSelectTextFragment_FileSizeDetails"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="2dp"-->
+    <!--            android:layout_toEndOf="@id/tvSelectTextFragment_FileSizeHeader"-->
+    <!--            android:layout_below="@id/tvSelectTextFragment_FileNameHeader"-->
+    <!--            android:text="@string/temp"-->
+    <!--            android:textSize="20sp"-->
+    <!--            />-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tvSelectTextFragment_TextLength"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="2dp"-->
-<!--            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"-->
-<!--            android:text="@string/tvSelectTextFragment_TextLength"-->
-<!--            android:textSize="20sp"/>-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tvSelectTextFragment_TextLength"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="2dp"-->
+    <!--            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"-->
+    <!--            android:text="@string/tvSelectTextFragment_TextLength"-->
+    <!--            android:textSize="20sp"/>-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/tvSelectTextFragment_MaxSignsDetails"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="2dp"-->
-<!--            android:layout_toEndOf="@id/tvSelectTextFragment_TextLength"-->
-<!--            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"-->
-<!--            android:text="@string/temp"-->
-<!--            android:textSize="20sp"-->
-<!--            />-->
-<!--    </RelativeLayout>-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/tvSelectTextFragment_MaxSignsDetails"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="2dp"-->
+    <!--            android:layout_toEndOf="@id/tvSelectTextFragment_TextLength"-->
+    <!--            android:layout_below="@id/tvSelectTextFragment_FileSizeHeader"-->
+    <!--            android:text="@string/temp"-->
+    <!--            android:textSize="20sp"-->
+    <!--            />-->
+    <!--    </RelativeLayout>-->
 
 </LinearLayout>
